--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/OneStromberg/camera-node#readme",
   "dependencies": {
     "pngjs": "^3.2.0",
+    "firebase": "^4.1.3",
     "v4l2camera": "^1.0.4"
   }
 }
