--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "pngjs": "^3.2.0",
     "firebase": "^4.1.3",
+    "node-ipc": "^9.0.1",
     "v4l2camera": "^1.0.4"
   }
 }
